Fix for unneeded scrollbar appearing

--- a/src/app/dashboard/dashboard.component.css
+++ b/src/app/dashboard/dashboard.component.css
@@ -1,5 +1,5 @@
 .logo {
-  margin: 0 auto;
+  margin: 4rem auto;
   width: fit-content;
 }
 
